--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             profile: {
                 name: "whysolitude",
                 subtitle: "Full-stack Developer • Python / Web",
-                description: "Обычный разработчик из Саяногорска. Меня зовут Степан, мне 14, и я программист. Работаю на языках Python, HTML, CSS и JS. Сейчас работаю над своим голосовым помощником для пк, подробнее вы можете узнать во вкладке 'Социалки', в моем дискорд сервере.",
+                description: "Обычный разработчик из Саяногорска. Меня зовут Степан, мне 14, и я программист. Работаю на языках Python и JS. Сейчас работаю над своим голосовым помощником для пк, подробнее вы можете узнать во вкладке 'Социалки', в моем дискорд сервере.",
                 avatar: "https://cdn.discordapp.com/attachments/1200392128312918087/1444663987999604777/e2cc3f915e2967ea83fa57a69dcdf911.png?ex=692d87af&is=692c362f&hm=a3b79182b86c44ffa8ee0b3ad3456dd167226f47d8366ed7a885cf40c558a983& ",
                 tags: ["JavaScript", "Python", "Web"],
             },
@@ -314,5 +314,6 @@
         });
     </script>
 </body>
+
 
 </html>
